[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/ametralladora.gd" type="Script" id=1]
[ext_resource path="res://images/arma.png" type="Texture" id=2]
[ext_resource path="res://audio/arma.ogg" type="AudioStream" id=3]
[ext_resource path="res://audio/arma sin balas.wav" type="AudioStream" id=4]
[ext_resource path="res://audio/gatillo.wav" type="AudioStream" id=5]

[sub_resource type="RectangleShape2D" id=1]

[node name="ametralladora" type="KinematicBody2D" groups=[
"Armas",
]]
position = Vector2( 0.844299, 1.02956 )
script = ExtResource( 1 )

[node name="arma" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
disabled = true

[node name="pos_bala" type="Position2D" parent="."]
position = Vector2( 102.115, -0.66742 )

[node name="tiempo_entre_balas" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="recargar_timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="fuego" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="gatillo" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="sin_balas" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
[connection signal="timeout" from="tiempo_entre_balas" to="." method="_on_tiempo_entre_balas_timeout"]
[connection signal="timeout" from="recargar_timer" to="." method="_on_recargar_timer_timeout"]
